# tsukuyomi

./: .appveyor.yml  .clippy.toml  .clog.toml  .codecov.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  Rakefile  aliases.js  azure-pipelines.yml  index.html  release.toml  search-index.js  source-files.js
codegen/: Cargo.toml
codegen/src/: async_handler.rs  handler.rs  lib.rs
codegen/tests/: async_with_await.rs  async_with_input.rs  async_without_input.rs  ready_with_input.rs  ready_without_input.rs  test_async_handler.rs  test_handler.rs
contrib/tsukuyomi-juniper/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
contrib/tsukuyomi-template/: Cargo.toml
examples/.template/: Cargo.toml
examples/async-await/: Cargo.toml
examples/codegen/: Cargo.toml
examples/cors/: Cargo.toml  README.md
examples/diesel/: Cargo.toml
examples/git-server/: Cargo.toml  git.rs  main.rs
examples/http-proxy/: Cargo.toml
examples/json/: Cargo.toml
examples/juniper/: Cargo.toml
examples/lines/: Cargo.toml  lines.rs  main.rs
examples/logging/: Cargo.toml
examples/native-tls/: Cargo.toml  README.md
toolkit/: Cargo.toml
toolkit/macros/: Cargo.toml
toolkit/src/: askama.rs  fs.rs  lib.rs  websocket.rs
toolkit/tests/: askama.rs  fs.rs  websocket.rs
tsukuyomi/: Cargo.toml  all.html  index.html  macro.chain.html  macro.loc!.html  macro.loc.html  macro.local_key!.html  macro.local_key.html  macro.path.html  sidebar-items.js  struct.App.html  struct.Error.html  struct.Input.html  trait.Endpoint.html  trait.Extractor.html  trait.Handler.html  trait.HttpError.html  trait.IntoResponse.html  trait.ModifyHandler.html  trait.Responder.html  type.Result.html
tsukuyomi-askama/: Cargo.toml  README.md
tsukuyomi-askama/macros/: Cargo.toml  lib.rs
tsukuyomi-askama/src/: lib.rs
tsukuyomi-askama/tests/: askama.rs  test_askama.rs  tests.rs
tsukuyomi-codegen/: Cargo.toml  lib.rs
tsukuyomi-codegen/src/: extract.rs  handler.rs  lib.rs  local_data.rs  util.rs
tsukuyomi-codegen/tests/: async_with_input.rs  async_without_input.rs  ready_with_input.rs  smokes.rs
tsukuyomi-cors/: Cargo.toml  README.md
tsukuyomi-cors/src/: lib.rs
tsukuyomi-cors/tests/: test_cors.rs
tsukuyomi-fs/: Cargo.toml
tsukuyomi-fs/src/: lib.rs
tsukuyomi-fs/tests/: fs.rs
tsukuyomi-internal/: Cargo.toml
tsukuyomi-internal-macros/: Cargo.toml
tsukuyomi-internal-macros/src/: derive_template_responder.rs  lib.rs
tsukuyomi-internal/src/: handler.rs  lib.rs  output.rs  route.rs
tsukuyomi-juniper/: Cargo.toml  README.md
tsukuyomi-juniper/src/: error.rs  executor.rs  graphiql.rs  lib.rs  request.rs
tsukuyomi-juniper/tests/: integration_test.rs  test_interation.rs  test_juniper.rs
tsukuyomi-server/: Cargo.toml  README.md
tsukuyomi-server/src/: error.rs  io.rs  lib.rs  local.rs  rt.rs  runtime.rs  server.rs  test.rs
tsukuyomi-service/: Cargo.toml
tsukuyomi-service/src/: lib.rs
tsukuyomi-session/: Cargo.toml  README.md
tsukuyomi-session/src/: lib.rs  session.rs  storage.rs  util.rs
tsukuyomi-session/tests/: test_session.rs
tsukuyomi-tungstenite/: Cargo.toml  README.md
tsukuyomi-tungstenite/src/: handshake.rs  lib.rs  websocket.rs  ws.rs
tsukuyomi-tungstenite/tests/: test_tungstenite.rs
tsukuyomi-websocket/: Cargo.toml
tsukuyomi-websocket/src/: lib.rs
tsukuyomi-websocket/tests/: test_websocket.rs  websocket.rs
tsukuyomi/app/: REMOTE_ADDR.v.html  constant.REMOTE_ADDR.html  index.html  sidebar-items.js  struct.App.html  struct.AppBody.html  struct.AppService.html
tsukuyomi/core/: Cargo.toml
tsukuyomi/endpoint/: Call.t.html  CallAsync.t.html  call_async.v.html  endpoint.v.html  fn.call.html  fn.call_async.html  fn.endpoint.html  index.html  sidebar-items.js  struct.Call.html  struct.CallAsync.html  trait.Endpoint.html
tsukuyomi/error/: BoxedStdCompat.t.html  HttpError.t.html  bad_request.v.html  fn.bad_request.html  fn.err_msg.html  fn.forbidden.html  fn.internal_server_error.html  fn.method_not_allowed.html  fn.not_found.html  fn.unauthorized.html  forbidden.v.html  index.html  internal_server_error.v.html  method_not_allowed.v.html  sidebar-items.js  struct.BoxedStdCompat.html  struct.Error.html  trait.HttpError.html  type.Result.html  unauthorized.v.html
tsukuyomi/extractor/: Extractor.t.html  extension.v.html  fn.extension.html  fn.extract.html  fn.method.html  fn.query.html  fn.ready.html  fn.uri.html  fn.value.html  fn.version.html  index.html  method.v.html  sidebar-items.js  trait.Extractor.html  uri.v.html
tsukuyomi/fs/: ArcPath.t.html  OpenConfig.t.html  index.html  sidebar-items.js  struct.ArcPath.html  struct.NamedFile.html  struct.OpenConfig.html
tsukuyomi/future/: Compat01.t.html  Futures01CompatExt.t.html  enum.MaybeDone.html  fn.oneshot.html  fn.poll_fn.html  index.html  sidebar-items.js  struct.Compat01.html  trait.Futures01CompatExt.html  trait.TryFuture.html
tsukuyomi/handler/: ModifyHandler.t.html  fn.handler.html  handler.v.html  index.html  sidebar-items.js  trait.Handler.html  trait.ModifyHandler.html
tsukuyomi/input/: Cookies.t.html  index.html  sidebar-items.js  struct.Cookies.html  struct.Input.html
tsukuyomi/internal/: Cargo.toml
tsukuyomi/localmap/: Cargo.toml
tsukuyomi/macros/: Cargo.toml
tsukuyomi/output/: Html.t.html  JsonPretty.t.html  Oneshot.t.html  Preset.t.html  Rendered.t.html  Respond.t.html  ResponderFn.t.html  fn.html.html  fn.json.html  fn.json_pretty.html  fn.oneshot.html  fn.render.html  fn.respond.html  html.v.html  index.html  json_pretty.v.html  oneshot.v.html  respond.v.html  sidebar-items.js  struct.Html.html  struct.Json.html  struct.JsonPretty.html  struct.Oneshot.html  struct.Rendered.html  struct.ResponderFn.html  trait.Preset.html  trait.Respond.html  trait.Responder.html
tsukuyomi/server/: Cargo.toml  build.rs  index.html  struct.Server.html
tsukuyomi/src/: app.rs  async_result.rs  common.rs  config.rs  core.rs  endpoint.rs  error.rs  extractor.rs  fs.rs  future.rs  generic.rs  handler.rs  input.rs  (+17 more)
(+1126 files in other folders)
