[package]
name = "tsukuyomi-workspace"
version = "0.0.0"
publish = false

[lib]
path = ".empty.rs"

[dev-dependencies]
failure = "0.1.3"
juniper = "0.10"
tokio-rustls = "0.8"
tokio-tungstenite = "0.6"
tungstenite = "0.6"
walkdir = "2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[workspace]
members = [
  "tsukuyomi",
  "tsukuyomi/macros",

  "tsukuyomi-server",
  "tsukuyomi-service",

  "tsukuyomi-askama",
  "tsukuyomi-cors",
  "tsukuyomi-juniper",
  "tsukuyomi-session",
  "tsukuyomi-tungstenite",

  "testcrates/doctest",

  "examples/basic",
  "examples/cors",
  "examples/diesel",
  #"examples/http-proxy",
  "examples/juniper",
  "examples/json",
  "examples/native-tls",
  "examples/openssl",
  "examples/routing",
  "examples/rustls",
  "examples/session",
  "examples/staticfile",
  "examples/template-askama",
  "examples/template-tera",
  "examples/unix-socket",
  "examples/websocket",
]

[patch.crates-io]
tsukuyomi = { version = "0.5.0-dev", path = "tsukuyomi" }
tsukuyomi-server = { version = "0.2.0-dev", path = "tsukuyomi-server" }
tsukuyomi-service = { version = "0.1.0-dev", path = "tsukuyomi-service" }
tsukuyomi-askama = { version = "0.2.0-dev", path = "tsukuyomi-askama" }
tsukuyomi-cors = { version = "0.2.0-dev", path = "tsukuyomi-cors" }
tsukuyomi-juniper = { version = "0.3.0-dev", path = "tsukuyomi-juniper" }
tsukuyomi-session = { version = "0.2.0-dev", path = "tsukuyomi-session" }
tsukuyomi-tungstenite = { version = "0.2.0-dev", path = "tsukuyomi-tungstenite" }
