[package]
name = "tsukuyomi-workspace"
version = "0.0.0"
edition = "2018"
publish = false # never published

[dependencies]
doubter = { version = "0.1.0", default-features = false }

[dev-dependencies]
tsukuyomi = { version = "0.5", path = "tsukuyomi" }
tsukuyomi-server = { version = "0.2", path = "tsukuyomi-server" }

# for documentation
failure = "0.1.3"
juniper = "0.10"
tokio-rustls = "0.8"
tokio-tungstenite = { version = "0.6", default-features = false }
tungstenite = { version = "0.6", default-features = false }
walkdir = "2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[workspace]
members = [
  "tsukuyomi",
  "tsukuyomi/macros",

  "tsukuyomi-server",
  "tsukuyomi-service",

  "tsukuyomi-askama",
  "tsukuyomi-cors",
  "tsukuyomi-juniper",
  "tsukuyomi-session",
  "tsukuyomi-tungstenite",

  "examples/basic",
  "examples/cors",
  "examples/diesel",
  "examples/http-proxy",
  "examples/juniper",
  "examples/json",
  "examples/native-tls",
  "examples/openssl",
  "examples/routing",
  "examples/rustls",
  "examples/session",
  "examples/staticfile",
  "examples/template-askama",
  "examples/template-tera",
  "examples/unix-socket",
  "examples/websocket",
]

[patch.crates-io]
tsukuyomi = { version = "0.5.0", path = "tsukuyomi" }
tsukuyomi-macros = { version = "0.5.0", path = "tsukuyomi/macros" }
tsukuyomi-server = { version = "0.2.0", path = "tsukuyomi-server" }
tsukuyomi-service = { version = "0.1.0", path = "tsukuyomi-service" }
tsukuyomi-askama = { version = "0.2.0", path = "tsukuyomi-askama" }
tsukuyomi-cors = { version = "0.2.0-dev", path = "tsukuyomi-cors" }
tsukuyomi-juniper = { version = "0.3.0-dev", path = "tsukuyomi-juniper" }
tsukuyomi-session = { version = "0.2.0-dev", path = "tsukuyomi-session" }
tsukuyomi-tungstenite = { version = "0.2.0-dev", path = "tsukuyomi-tungstenite" }
