[package]
name = "tsukuyomi-workspace"
version = "0.0.0"
edition = "2018"
publish = false # never published

[dependencies]
doubter = { version = "0.1.0", default-features = false }

[dev-dependencies]
tsukuyomi = { version = "0.6.0-dev", path = "tsukuyomi" }

# for documentation
askama = "0.7.2"
failure = "0.1.3"
juniper = "0.11.1"
tokio-rustls = "0.8"
tokio-tungstenite = { version = "0.6", default-features = false }
tungstenite = { version = "0.6", default-features = false }
walkdir = "2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[workspace]
members = [
  "tsukuyomi",
  "tsukuyomi/macros",

  "tsukuyomi-askama",
  "tsukuyomi-cors",
  "tsukuyomi-juniper",
  "tsukuyomi-session",
  "tsukuyomi-tungstenite",

  "examples/basic",
  "examples/cors",
  "examples/diesel",
  "examples/http-proxy",
  "examples/juniper",
  "examples/json",
  "examples/logging",
  "examples/routing",
  "examples/session",
  "examples/session-redis",
  "examples/staticfile",
  "examples/template-askama",
  "examples/template-tera",
  "examples/websocket",
]

[patch.crates-io]
tsukuyomi = { path = "tsukuyomi" }
tsukuyomi-macros = { path = "tsukuyomi/macros" }
tsukuyomi-askama = { path = "tsukuyomi-askama" }
tsukuyomi-cors = { path = "tsukuyomi-cors" }
tsukuyomi-juniper = { path = "tsukuyomi-juniper" }
tsukuyomi-session = { path = "tsukuyomi-session" }
tsukuyomi-tungstenite = { path = "tsukuyomi-tungstenite" }

version-sync = { git = "https://github.com/ubnt-intrepid/version-sync.git", branch = "bump-version" }

izanami = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-http = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-rt = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-service = { git = "https://github.com/ubnt-intrepid/izanami.git" }
