[package]
name = "tsukuyomi-codegen"
version = "0.1.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.9"
syn = { version = "0.14.5", features = ["full", "extra-traits"] }
quote = "0.6.4"
failure = "0.1.1"

[dev-dependencies]
tsukuyomi = { version = "0.3.0-dev", path = ".." }
futures = "0.1.23"

[features]
nightly = ["proc-macro2/nightly"]
