[package]
name = "tsukuyomi-toolkit"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

build = "build.rs"

[package.metadata.version-sync]
use-preset = false

[[package.metadata.version-sync.replacements]]
file = "Cargo.toml"
replacers = [
  { type = "regex", search = "version = \"[0-9a-z\\.-]+\" # <cargo-version-sync>", replace = "version = \"{{version}}\" # <cargo-version-sync>" }
]

[[package.metadata.version-sync.replacements]]
file = "macros/Cargo.toml"
replacers = [
  { type = "regex", search = "version = \"[0-9a-z\\.-]+\" # <cargo-version-sync>", replace = "version = \"{{version}}\" # <cargo-version-sync>" }
]

[[package.metadata.version-sync.replacements]]
file = "src/lib.rs"
replacers = [
  { type = "builtin", target = "html-root-url" }
]

[dependencies]
tsukuyomi = { version = "0.4.0-dev", path = ".." }
futures = "0.1"
http = "0.1"
askama = "0.7"
mime_guess = "2.0.0-alpha.6"
bytes = "0.4"
failure = "0.1.2"
filetime = "0.2"
log = "0.4"
serde_plain = "0.3"
serde_urlencoded = "0.5"
time = "0.1"
walkdir = "2"
base64 = "0.10"
sha-1 = "0.8"
tokio-tungstenite = "0.6"
tungstenite = "0.6"

[dev-dependencies]
cargo-version-sync = { version = "0.0.5", default-features = false }

[dependencies.tsukuyomi-toolkit-macros]
version = "0.1.0" # <cargo-version-sync>
path = "macros"
