[package]
name = "tsukuyomi-askama"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
tsukuyomi = { version = "0.4.0-dev", path = "../tsukuyomi" }
askama = "0.7"
mime_guess = "2.0.0-alpha.6"
http = "0.1"

[dev-dependencies.cargo-version-sync]
version = "0.0.5"
default-features = false
