[package]
name = "tsukuyomi-askama"
description = "Askama integration for Tsukuyomi."
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"
readme = "README.md"

build = "build.rs"

[dependencies]
tsukuyomi = { version = "0.4.0", path = "../tsukuyomi" }
askama = "0.7"
mime_guess = "2.0.0-alpha.6"
http = "0.1"

[dev-dependencies]
version-sync = "0.6"
