[package]
name = "tsukuyomi-codegen"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.6"
syn = { version = "0.14.4", features = ["full", "extra-traits"] }
quote = "0.6.3"

[dev-dependencies]
tsukuyomi = { version = "0.2.0", path = ".." }
futures = "0.1.21"
futures-await = "0.1.1"

[features]
nightly = ["proc-macro2/nightly"]
