[package]
name = "tsukuyomi-cors"
description = "CORS support for Tsukuyomi"
version = "0.2.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"

[dependencies]
tsukuyomi = "0.5.0"
either = "1"
failure = "0.1.3"
futures = "0.1"
http = "0.1"

[dev-dependencies]
version-sync = "0.6"
tsukuyomi-server = { version = "0.2.0", path = "../tsukuyomi-server" }
