[package]
name = "tsukuyomi-cors"
description = "CORS support for Tsukuyomi"
version = "0.3.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"

[dependencies]
tsukuyomi = { version = "0.6.0-dev", path = "../tsukuyomi" }
either = "1"
failure = "0.1.3"
futures = "0.1"
http = "0.1"

[dev-dependencies]
version-sync = "0.7"
izanami = "0.1.0-preview.1"
