[package]
name = "tsukuyomi-fs"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
tsukuyomi = { version = "0.4.0-dev", path = "../tsukuyomi" }
bytes = "0.4"
failure = "0.1.2"
filetime = "0.2"
futures = "0.1"
http = "0.1"
log = "0.4"
time = "0.1"
walkdir = "2"

[dev-dependencies]
cargo-version-sync = { git = "https://github.com/ubnt-intrepid/cargo-version-sync.git", default-features = false }
