[package]
name = "tsukuyomi-internal-macros"
version = "0.4.0-dev" # <cargo-version-sync>
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

build = "build.rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
