[package]
name = "tsukuyomi-juniper"
description = """
Components for integrating GraphQL endpoints into Tsukuyomi.
"""
version = "0.3.1"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"

[dependencies]
tsukuyomi = { version = "0.5.2", path = "../tsukuyomi" }
tsukuyomi-server = { version = "0.2.0", path = "../tsukuyomi-server" }
juniper = "0.11.1"

bytes = "0.4"
futures = "0.1"
http = "0.1"
mime = "0.3"
percent-encoding = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.5"

[dev-dependencies]
percent-encoding = "1"
version-sync = "0.6"

[dev-dependencies.juniper]
version = "0.11.1"
features = ["expose-test-schema", "serde_json"]
