[package]
name = "tsukuyomi-juniper"
description = """
Components for integrating GraphQL endpoints into Tsukuyomi.
"""
version = "0.4.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"

[dependencies]
tsukuyomi = { version = "0.6.0-dev", path = "../tsukuyomi" }
izanami-util = "0.1.0-preview.1"
juniper = "0.11.1"

bytes = "0.4"
failure = "0.1.5"
futures = "0.1"
http = "0.1"
mime = "0.3"
percent-encoding = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.5"

[dev-dependencies]
izanami = "0.1.0-preview.1"
percent-encoding = "1"
version-sync = "0.7"

[dev-dependencies.juniper]
version = "0.11.1"
features = ["expose-test-schema", "serde_json"]
