[package]
name = "tsukuyomi-server"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
bytes = "0.4.10"
failure = "0.1.2"
futures = "0.1.25"
http = "0.1.13"
hyper = "0.12.12"
tokio = "0.1.11"
tokio-threadpool = "0.1.7"

# for TLS
rustls = { version = "0.14.0", optional = true }
tokio-rustls = { version = "0.8.0", optional = true }
log = "0.4.5"

[features]
tls = [
    "rustls",
    "tokio-rustls",
]
