[package]
name = "tsukuyomi-server"
version = "0.2.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"
description = """
A general purpose HTTP server based on Hyper and tower-service.
"""

[dependencies]
bytes = "0.4"
cookie = { version = "0.11", features = ["percent-encode"] }
futures = "0.1"
hyper = "0.12"
http = "0.1"
log = "0.4"
failure = "0.1.3"
tokio = "0.1"

native-tls = { version = "0.2", optional = true }
tokio-tls = { version = "0.2", optional = true }

rustls = { version = "0.14", optional = true }
tokio-rustls = { version = "0.8", optional = true }

openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.3", optional = true }

[dependencies.tsukuyomi-rt]
version = "0.1.0-dev"
path = "../tsukuyomi-rt"

[dependencies.tsukuyomi-service]
version = "0.1.0-dev"
path = "../tsukuyomi-service"

[dev-dependencies]
version-sync = "0.6"

[features]
# Enables the support for TLS acceptors.
use-native-tls = ["native-tls", "tokio-tls"]
use-rustls = ["rustls", "tokio-rustls"]
use-openssl = ["openssl", "tokio-openssl"]
