[package]
name = "tsukuyomi-session"
version = "0.3.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
Session support for Tsukuyomi.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"

[dependencies]
tsukuyomi = { version = "0.6.0-dev", path = "../tsukuyomi" }
cookie = "0.11"

# for Redis session backend
redis = { version = "0.9", optional = true }
uuid = { version = "0.7", optional = true, features = ["v4"] }
futures = "0.1"
serde_json = "1"
serde = "1"

[dev-dependencies]
http = "0.1"
version-sync = "0.7"
izanami = "0.1.0-preview.1"

[features]
default = ["secure"]
secure = ["cookie/secure", "tsukuyomi/secure"]
use-redis = ["redis", "uuid"]
