[package]
name = "tsukuyomi-tungstenite"
description = "The basic WebSocket support for Tsukuyomi, powered by tungstenite"
version = "0.2.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"

[dependencies]
tsukuyomi = { version = "0.5.0", path = "../tsukuyomi" }
tsukuyomi-server = { version = "0.2.0", path = "../tsukuyomi-server" }

base64 = "0.10"
failure = "0.1.2"
futures = "0.1"
http = "0.1"
sha-1 = "0.8"
tokio-tungstenite = { version = "0.6", default-features = false }
tungstenite = { version = "0.6", default-features = false }
log = "0.4"

[dev-dependencies]
version-sync = "0.6"
