[package]
name = "tsukuyomi-tungstenite"
description = "The basic WebSocket support for Tsukuyomi, powered by tungstenite"
version = "0.3.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"

[dependencies]
tsukuyomi = { version = "0.6.0-dev", path = "../tsukuyomi" }

base64 = "0.10"
failure = "0.1.2"
futures = "0.1"
http = "0.1"
sha-1 = "0.8"
tokio-io = "0.1"
tokio-sync = "0.1"
tungstenite = { version = "0.7", default-features = false }
log = "0.4"

[dev-dependencies]
izanami = "0.1.0-preview.1"
version-sync = "0.7"
