[package]
name = "tsukuyomi-websocket"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
tsukuyomi = { version = "0.4.0-dev", path = "../tsukuyomi" }

base64 = "0.10"
failure = "0.1.2"
futures = "0.1"
http = "0.1"
sha-1 = "0.8"
tokio-tungstenite = "0.6"
tungstenite = "0.6"

[dev-dependencies]
cargo-version-sync = { version = "0.0.5", default-features = false }
