[package]
name = "tsukuyomi"
description = """
Asynchronous Web framework for Rust
"""
version = "0.4.1"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"
readme = "../README.md"
keywords = ["web", "framework", "futures", "hyper", "tokio"]
categories = ["web-programming::http-server"]

build = "build.rs"

include = [
  "src/**/*.rs",
  "tests/**/*.rs",
  "benches/**/*.rs",
  "examples/**/*.rs",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
bytes = "0.4"
cookie = { version = "0.11", features = ["percent-encode"] }
either = "1.5"
failure = "0.1.2"
filetime = "0.2"
futures = "0.1"
http = "0.1"
hyper = "0.12"
indexmap = "1"
log = "0.4"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "0.3"
serde_urlencoded = "0.5"
time = "0.1"
tokio = "0.1"
tokio-threadpool = "0.1"
tower-service = "0.1"
url = "1.7.1"
uuid = "0.7.1"

native-tls = { version = "0.2", optional = true }
tokio-tls = { version = "0.2", optional = true }

rustls = { version = "0.14", optional = true }
tokio-rustls = { version = "0.8", optional = true }

openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.3", optional = true }

tower-web = { version = "0.3", default-features = false, optional = true }

[dependencies.tsukuyomi-internal]
version = "0.4.0" # <cargo-version-sync>
path = "./internal"
features = ["localmap"]

[dependencies.tsukuyomi-macros]
version = "0.4.0" # <cargo-version-sync>
path = "./macros"

[dev-dependencies]
cookie = "0.11"
either = "1"
matches = "0.1"
time = "0.1"
serde = { version = "1", features = ["derive"] }

[features]
default = []
full = [
  "secure",
  "tower-middleware",
  "use-native-tls",
  "use-rustls",
  "use-openssl",
]

# Enables the features around signing/encryption, depending on 'ring'.
secure = ["cookie/secure"]

# Enables the support for middlewares in tower-web.
tower-middleware = ["tower-web"]

# Enables the support for TLS acceptors.
use-native-tls = ["native-tls", "tokio-tls"]
use-rustls = ["rustls", "tokio-rustls"]
use-openssl = ["openssl", "tokio-openssl"]
