[package]
name = "tsukuyomi"
description = """
Asynchronous Web framework for Rust
"""
version = "0.6.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi.git"
readme = "../README.md"
keywords = ["web", "framework", "futures", "hyper", "tokio"]
categories = ["web-programming::http-server"]

include = [
  "src/**/*.rs",
  "tests/**/*.rs",
  "benches/**/*.rs",
  "examples/**/*.rs",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
bytes = { version = "0.4", features = ["either"] }
cookie = { version = "0.11", features = ["percent-encode"] }
either = "1.5"
exitfailure = "0.5"
failure = "0.1.2"
filetime = "0.2"
futures01 = { package = "futures", version = "0.1" }
http = "0.1"
indexmap = "1"
izanami = "0.1.0-preview.1"
lazy_static = "1.2"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0-alpha.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "0.3"
serde_urlencoded = "0.5"
time = "0.1"
tokio = "0.1"
tokio-buf = "0.1"
tokio-executor = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"
url = "1.7.1"
uuid = "0.7.1"

[dependencies.tsukuyomi-macros]
version = "0.6.0-dev"
path = "./macros"

[dev-dependencies]
matches = "0.1"
version-sync = "0.7"

[features]
default = []
full = ["secure"]

# Enables the features around signing/encryption, depending on 'ring'.
secure = ["cookie/secure"]
