[package]
name = "tsukuyomi-juniper"
description = """
Utilities to process GraphQL requests in Tsukuyomi, by using Juniper.
"""
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https//docs.rs/tsukuyomi-juniper/"

include = [
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
tsukuyomi = { version = "0.2.0", path = "../.." }
juniper = "0.9.2"

bytes = "0.4"
failure = "0.1"
futures = "0.1.21"
http = "0.1.6"
hyperx = "0.12.0"
mime = "0.3"
percent-encoding = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.4"
tokio-executor = "0.1"

[dev-dependencies.juniper]
version = "0.9.2"
features = ["expose-test-schema", "serde_json"]
