[package]
name = "tsukuyomi-template"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
tsukuyomi = { version = "0.2.0", path = "../.." }
http = "0.1.6"
failure = "0.1"

askama = { version = "0.6.0", optional = true }

[features]
default = ["askama"]
