[package]
name = "example-{{ name }}" # replace the placeholder (kebab-case)
edition = "2018"
version = "0.0.0"
authors = [
  "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>",
  # append your name :)
]
publish = false

[[bin]]
name = "example_{{ name }}" # replace the placeholder (snake_case)
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.6"
izanami = "0.1.0-preview.1"

# append additional dependencies here

