[package]
name = "example-async-await"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "async-await"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
futures-await = "0.1.1"
pretty_env_logger = "0.2.3"
log = "0.4"
