[package]
name = "example-codegen"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "codegen"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../.." }
tsukuyomi-codegen = { path = "../../codegen", features = ["nightly"] }
futures-await = "0.1.1"
