[package]
name = "example-cors"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_cors"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.5.0-dev"
tsukuyomi-server = "0.2.0-dev"
tsukuyomi-cors = "0.2.0-dev"
serde = { version = "1", features = ["derive"] }
