[package]
name = "example-cors"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_cors"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../../tsukuyomi" }
tsukuyomi-cors = { path = "../../tsukuyomi-cors" }
serde = { version = "1", features = ["derive"] }
exitfailure = "0.5"
