[package]
name = "example-diesel"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "diesel"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../.." }

diesel = { version = "1.3.0", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"
failure = { version = "0.1.1", features = ["derive"] }
futures = "0.1.21"
serde = { version = "1.0.0", features = ["derive"] }
tokio-executor = "0.1"
tokio-threadpool = "0.1"
