[package]
name = "example-diesel"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "diesel"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.3.0-dev"

diesel = { version = "1.3.0", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"
failure = { version = "0.1.1", features = ["derive"] }
futures = "0.1.21"
http = "0.1.6"
pretty_env_logger = "0.2.1"
serde = { version = "1.0.0", features = ["derive"] }
serde_qs = "0.4"
