[package]
name = "example-diesel"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_diesel"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.5.0-dev"
tsukuyomi-server = "0.2.0-dev"
diesel = { version = "1.3.0", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"
failure = "0.1.3"
futures = "0.1"
pretty_env_logger = "0.2.1"
serde = { version = "1.0.0", features = ["derive"] }

libsqlite3-sys = { version = "0.9", features = ["bundled"] }
