[package]
name = "example-http-proxy"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_http_proxy"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.5.0"
tsukuyomi-server = "0.2.0"
tsukuyomi-service = "0.1.0"

futures = "0.1"
http = "0.1"
reqwest = "0.9"
tokio = "0.1"
