[package]
name = "example-http-proxy"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_http_proxy"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../../tsukuyomi" }
izanami = "0.1.0-preview.1"
izanami-service = "0.1.0-preview.1"

futures = "0.1"
http = "0.1"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
tokio = "0.1"
