[package]
name = "example-http-proxy"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_http_proxy"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../../tsukuyomi" }

bytes = "0.4"
exitfailure = "0.5"
futures = "0.1"
http = "0.1"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
tokio = "0.1"
