[package]
name = "example-json"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_json"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.6.0-dev"
izanami = "0.1.0-preview.1"

futures = "0.1.21"
http = "0.1"
serde = { version = "1.0", features = ["derive"] }
