[package]
name = "example-json"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_json"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../../tsukuyomi" }
exitfailure = "0.5"
http = "0.1"
serde = { version = "1.0", features = ["derive"] }
