[package]
name = "example-juniper"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "juniper"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.4.0-dev"
tsukuyomi-juniper = "0.2.0-dev"
juniper = "0.10"
futures = "0.1"
failure = "0.1.3"
