[package]
name = "example-juniper"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_juniper"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.5.0"
tsukuyomi-server = "0.2.0"
tsukuyomi-juniper = "0.3.0-dev"
juniper = "0.10"
futures = "0.1"
