[package]
name = "example-juniper"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_juniper"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../../tsukuyomi" }
tsukuyomi-juniper = { path = "../../tsukuyomi-juniper" }
juniper = "0.11.1"
exitfailure = "0.5"
