[package]
name = "lines"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "lines"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../.." }
futures = "0.1.21"
http = "0.1.6"
failure = { version = "0.1.1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.2.3"
tokio-codec = "0.1.0"
